--- a/index.html
+++ b/index.html
@@ -9,50 +9,9 @@
 <link rel="stylesheet" href="/styles/default.css">
 </head>
 
-<body style="text-align: center;" onkeyup="changeBackgroundImage(event)">
+<body style="text-align: center;">
 
-<h1>sgcderek</h1>
-
-<p>Welcome to my site. Here you will find a random assortment of information and topics related to amateur radio, with a heavy focus on amateur satellite reception. To see more of my content or to contact me, check out my social media links below;</p>
-<p><a href="https://www.youtube.com/channel/UCSHVnVnUErLxEU1mfWM3EBw" target="_blank">YouTube</a> - <a href="https://github.com/sgcderek" target="_blank">GitHub</a> - <a href="https://www.thingiverse.com/derekcz/designs" target="_blank">Thingiverse</a> - <a href="https://twitter.com/dereksgc" target="_blank">Twitter</a> - <a href="/blog/nokia-3310.html#number">SMS?</a></p>
-<p>You can join my Discord server by clicking <a href="https://discord.gg/b375hYqUxh" target="_blank">here</a>.</p>
-<p>If you are feeling extra generous you can also support me directly via <a href="https://ko-fi.com/dereksgc" target="_blank">Ko-fi</a>. Special thanks to;</p>
-<p><span style="color: #389900;">brongle</span><span style="color: #00994d;"> - microp11 - thebaldgeek - Xerbo - Whatwhatphysics - yakko warner - BackHive - Carl Reinemann - hmdsamarasekara - Nautiluscl - Martin HB9FXX - KentuckyFriedData - Pablo de la Fuente - LudaN - Mikael Falkvidd - transistorman - Skunkola - AsciiWolf - Steven Kittelsen - Tecas Science Guy - R1chä - Damian Nowak</span></p>
-
-<hr class="solid">
-
-<p style="line-height: 1.8;">
-<a href="/tools/helix-calc.html">Helical antenna calculator</a><br />
-<a href="/satfreq/" target="_blank">Satellite frequency list</a><br />
-<a href="/tools/screenres.html" target="_blank">Device screen information</a><br />
-</p>
-
-<hr class="solid">
-
-<p style="line-height: 1.8;">
-	<a></a>See much more content on my <a href="https://www.youtube.com/channel/UCSHVnVnUErLxEU1mfWM3EBw" target="_blank">YouTube</a> channel<br />
-    <a href="/blog/nokia-3310.html">Nokia 3310 USB-C and battery modification</a><br />
-    <a href="/blog/noaa-21-briefing.html">All you need to know about the upcoming NOAA-21 satellite</a><br />
-    <a href="/blog/artemis-1.html">Artemis I mission radio frequency allocations</a><br />
-    <a href="/blog/CGMS50.html">CGMS 50 weather satellite status summary</a><br />
-    <a href="/blog/kgstv-reception.html">How to receive and decode KG-STV image transmissions</a><br />
-    <a href="/blog/beginner-hrpt-guide.html">Beginner's guide to HRPT reception</a><br />
-    <a href="/blog/lnb-high-band-mod.html">Hard-wiring an LNB to use the high band 10.6 GHz oscillator</a><br />
-    <a href="/blog/starlink-beacons.html">Receiving Starlink satellite beacons on a budget</a><br />
-    <a href="/blog/noaa2-revival.html">NOAA-2 returning from the dead</a>
-</p>
-
-<script>
-    let buffer = "";
-    function changeBackgroundImage(event) {
-        buffer = (buffer + event.key).slice(-8);
-        if (buffer.toLowerCase() === "aiwprton") {
-            document.body.style.backgroundImage = "url('images/rhino.webp')";
-            document.body.style.backgroundSize = "cover";
-            buffer = "";
-        }
-    }
-</script>
+<p>index</p>
 
 </body>
 </html>
